--- a/gui/frontend/ui/main_window.ui
+++ b/gui/frontend/ui/main_window.ui
@@ -15,7 +15,7 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout_3">
-    <item row="0" column="1">
+    <item row="0" column="1" alignment="Qt::AlignTop">
      <widget class="QWidget" name="widgetButtons" native="true">
       <property name="minimumSize">
        <size>
